Mantendo compatibilidade versão java 1.8 (#926)
* Mantendo compatibilidade versão java 1.8

* Mantendo compatibilidade versão java 1.8

* Mantendo compatibilidade versão java 1.8

* Mantendo compatibilidade versão java 1.8

* Mantendo compatibilidade versão java 1.8

* Mantendo compatibilidade versão java 1.8

* Mantendo compatibilidade versão java 1.8

---------

Co-authored-by: Tecnosofti <Tecnosofti@host.docker.internal>
Co-authored-by: Tecnosofti <marcoslombardi>